# graphics_coursework

./: CMakeLists.txt  DOF_camera.cpp  DOF_camera.h  camera.h  colour.h  csg_object.cpp  csg_object.h  directional_light.cpp  directional_light.h  environment.h  full_camera.cpp  full_camera.h  global_material.cpp  global_material.h  hit.cpp  hit.h  light.h  linedrawer.cpp  main_lab2.cpp  main_lab34.cpp  material.h  object.h  phong_material.cpp  phong_material.h  photon.cpp  photon.h  photonMap_scene.cpp  photonMap_scene.h  photon_map.cpp  photon_map.h  point_light.cpp  point_light.h  polymesh_object.cpp  polymesh_object.h  quadratic_object.cpp  quadratic_object.h  scene.cpp  scene.h  simple_camera.cpp  sphere_object.cpp  (+3 more)
lab01/: linedrawer.cpp  main_lab1.cpp
